        PR 7093         * elf32-arm.c (bfd_elf32_arm_init_maps): Only process ARM ELF         object files.